changed styling in quick kit

--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>Authenticity (The Evidenced 'Self')</h1>
     <p>For the Romantics, authenticity was not a confession of sincere feelings. It was an aesthetic and ethical ideal: a work of art or a life should be a true expression of a singular, inner vision, not an imitation of external models. Authenticity is something you *achieve* in the work, not something you simply feel. It is a quality an interpreter can demonstrate through analysis.</p>
 
@@ -40,6 +43,10 @@
         </ul>
       </li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
+
   </article>
 </main>
 <footer data-template="footer"></footer>
