--- a/romantic-kit-contexts-america.html
+++ b/romantic-kit-contexts-america.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>Contexts: America (The Democratic Self)</h1>
     <p>American Romanticism, flourishing a generation after its European counterparts, adapted the movement's core tenets to the unique context of the United States: a young democracy, a vast and untamed landscape, and a cultural drive for independence.</p>
     <p>The central expression of this was <strong>Transcendentalism</strong>, a philosophical and literary movement centered in New England. Led by figures like Ralph Waldo Emerson and Henry David Thoreau, it fused German Idealism and English Romantic poetry with American individualism and a quasi-religious reverence for nature.</p>
@@ -32,6 +35,9 @@
       <li>Ralph Waldo Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em> (1841)</a> — The definitive statement of American intellectual and ethical independence.</li>
       <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em> (1854)</a> — The record of a lived experiment in applying Romantic and Transcendentalist principles.</li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
