--- a/romantic-kit-contexts-england.html
+++ b/romantic-kit-contexts-england.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>Contexts: England (The Poetic Revolution)</h1>
     <p>English Romanticism translated the philosophical energy of Germany into a concrete poetic revolution. Centered on figures like William Wordsworth and Samuel Taylor Coleridge, the movement's formal beginning is often dated to their 1798 collaboration, <em>Lyrical Ballads</em>. Their work was shaped by the twin upheavals of the French and Industrial Revolutions.</p>
 
@@ -36,6 +39,9 @@
       <li>William Wordsworth, <a href="https://faculty.csbsju.edu/dbeach/beautytruth/Wordsworth-PrefaceLB.pdf">“Preface to Lyrical Ballads” (1800)</a> — The essential manifesto for the new poetry.</li>
       <li>Samuel Taylor Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a> — The most important work of poetic theory from the period, where he outlines his theory of the imagination.</li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
