--- a/romantic-kit-glossary.html
+++ b/romantic-kit-glossary.html
@@ -12,6 +12,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>Glossary & Key Concepts</h1>
     <p>Use this as a quick reference. Each linked term connects to its dedicated page for a more rigorous explanation.</p>
 
@@ -69,6 +72,9 @@
       <li>Carlyle, <a href="https://www.unife.it/stum/lingue/insegnamenti/letteratura-inglese-ii/materiale-didattico-2021-2022/Thomas%20Carlyle-%20Signs%20of%20the%20Times-%201829.pdf">“Signs of the Times”</a></li>
       <li>Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em></a></li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
