--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>A Romantic Method for Reading (AI and Everything Else)</h1>
 
     <p>The Romantics didn't just have new ideas about art; they developed a new <em>method</em> for understanding it. At its heart is a radical premise from the philosopher Friedrich Schleiermacher: understanding is not our default state. <strong>Misunderstanding is the norm.</strong> Therefore, interpretation isn't a passive reception of meaning; it's a methodical art that must be "willed and sought at every point."</p>
@@ -58,6 +61,9 @@
           </ul>
       </li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
