--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>The Organic vs. The Mechanical (A Theory of Form)</h1>
     <p>The Romantics proposed a radical alternative to the Enlightenment's view of the universe as a clockwork machine. They saw nature, art, and even society not as mechanical assemblies of parts, but as **living organisms**: dynamic, developing wholes where the form grows from an inner, vital principle.</p>
     <p>This creates a powerful analytical lens for interpretation: is the structure of this work <strong>organic</strong> or <strong>mechanical</strong>?</p>
@@ -49,6 +52,9 @@
         </ul>
       </li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
