--- a/romantic-quick-kit.html
+++ b/romantic-quick-kit.html
@@ -13,8 +13,15 @@
   <header data-template="header"></header>
   <main>
     <article>
+      <div class="top-links">
+        <a href="index.html" class="quickkit-pill-small">← Blog Home</a>
+      </div>
       <h1>Romantic Quick Kit</h1>
-      <p>This hub is the “home base” for the series. It gives you quick, no-jargon routes into:</p>
+      <h2>How to use this</h2>
+      <ul>
+        <li>Use the Hermeneutics page as your reading method; the other pages are “what” to look for.</li>
+        <li>Every page links out to public sources so you can dive deeper without a paywall.</li>
+      </ul>
 
       <nav class="toc">
         <ul>
@@ -28,13 +35,10 @@
           <li><a href="romantic-kit-glossary.html">Quick Glossary</a></li>
         </ul>
       </nav>
+      <div class="bottom-links">
+        <a href="index.html" class="quickkit-pill">← Back to Blog Home</a>
+      </div>
 
-      <h2>How to use this</h2>
-      <ul>
-        <li>Skim the glossary first if terms feel fuzzy.</li>
-        <li>Use the Hermeneutics page as your reading method; the other pages are “what” to look for.</li>
-        <li>Every page links out to public sources so you can dive deeper without a paywall.</li>
-      </ul>
     </article>
   </main>
   <footer data-template="footer"></footer>
