--- a/romantic-kit-contexts-germany.html
+++ b/romantic-kit-contexts-germany.html
@@ -13,6 +13,9 @@
 <header data-template="header"></header>
 <main>
   <article>
+    <div class="top-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
     <h1>Contexts: Germany (The Philosophical Engine)</h1>
     <p>German Romanticism, particularly the circle in Jena (c. 1795–1805), was the intellectual crucible of the movement. More than a literary style, it was a philosophical revolution that sought to fuse poetry with theory, art with science, and life with thought. It provided the rigorous concepts that would be adapted and transformed across Europe.</p>
 
@@ -36,6 +39,9 @@
       <li>Friedrich Schlegel, <a href="https://germanhistorydocs.org/en/the-holy-roman-empire-1648-1815/friedrich-schlegel-athanaeum-fragments-1798"><em>Athenaeum Fragments</em> (selections)</a> — The manifesto of the Jena school, in its characteristic form.</li>
       <li>Friedrich Schlegel, <a href="https://www.sas.upenn.edu/~cavitch/pdf-library/Schlegel_Philosophical_Fragments_UMP_edition.pdf"><em>Philosophical Fragments</em> (PDF)</a> — A deeper dive into the theoretical project.</li>
     </ul>
+    <div class="bottom-links">
+      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+    </div>
   </article>
 </main>
 <footer data-template="footer"></footer>
