--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="post55.html">55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</a></li>
                 <li><a href="post54.html">54 Reclaiming the Romantic "Author"</a></li>
                 <li><a href="post53.html">53 Romanticism Was Never Naïve: A Defense in the Age of AI</a></li>
-                <li><a href="post52.html">52 Ugh</a></li>
+                <li><a href="post52.html">52 Analogies for writing with AI and why I don't like them</a></li>
                 <li><a href="post51.html">51 So about that shopping cart</a></li>
                 <li><a href="post50.html">50 Three mothers, two systems of meaning</a></li>
                 <li><a href="post49.html">49 Just a kid like everyone else</a></li>
