--- a/post50.html
+++ b/post50.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <h2>50 Three mothers, two systems of meaning</h2>
-            <p>The last few posts have explored the "Hero" music video through a few different lenses, reading the father's character for its internal conflicts (Post 49) and the family's story for its human cost (Post 47). But another kind of analysis is possible, one less concerned with individual psychology and more with how the image functions within a larger visual system. By treating the mother in the doorway not as a window onto a soul, but as a sign within a system, we can see how its meaning is constructed. To do this, we can place the image in a structural relationship with two iconic photographs: Dorothea Lange's "Migrant Mother" and Walker Evans' portrait of Allie Mae Burroughs.</p>
+            <p>The last few posts have explored the "Hero" music video through a few different lenses, reading the father's character for its internal conflicts (Post 49) and the family's story for its human cost (Post 47). But another kind of analysis is possible, one less concerned with individual psychology and more with how the image functions within a larger visual system. By treating the mother in the doorway not as a window onto a soul, but as a sign within a system, we can see how its meaning is constructed. To do this, we can place the image in a structural relationship with two iconic photographs: Dorothea Lange's "Migrant Mother" and Arthur Rothstein's portrait of a sharecropper's wife and children.</p>
             
             <div class="image-comparison">
                 <figure class="comparison-image">
@@ -27,12 +27,12 @@
                     <figcaption>Dorothea Lange, "Migrant Mother" (1936)</figcaption>
                 </figure>
                 <figure class="comparison-image">
-                    <img src="images/sharecropper-mom-and-kids.webp" alt="Walker Evans' portrait of Allie Mae Burroughs">
-                    <figcaption>Walker Evans, "Allie Mae Burroughs" (1936)</figcaption>
+                    <img src="images/sharecropper-mom-and-kids.webp" alt="Arthur Rothstein's photograph of wife and children of sharecropper">
+                    <figcaption>Arthur Rothstein, "Wife and children of sharecropper in Washington County, Arkansas" (1935)</figcaption>
                 </figure>
             </div>
             
-            <p>The photographs by Lange and Evans are foundational texts in the visual <a href="post23.html"><em>langue</em></a> (the shared language) of American resilience. They operate on a clear set of binary oppositions: inside/outside, family/world, safety/threat. In both images, the mother and children form a unified group, a sign of familial integrity. Their gazes are directed outward, confronting an unseen but understood external threat: the systemic failure of the Great Depression. These photographs function to create a national myth. They take the historical reality of poverty and naturalize the ideology of the enduring, insular family as the bedrock of the nation.</p>
+            <p>The photographs by Lange and Rothstein are foundational texts in the visual <a href="post23.html"><em>langue</em></a> (the shared language) of American resilience. They operate on a clear set of binary oppositions: inside/outside, family/world, safety/threat. In both images, the mother and children form a unified group, a sign of familial integrity. Their gazes are directed outward, confronting an unseen but understood external threat: the systemic failure of the Great Depression. These photographs function to create a national myth. They take the historical reality of poverty and naturalize the ideology of the enduring, insular family as the bedrock of the nation.</p>
 
             <p>The still from "Hero" is a specific act of <a href="post23.html"><em>parole</em></a> (an individual utterance) that only gains its full meaning when read against this established code. It systematically inverts the binary oppositions of the first system. Here, the threat is not external; it is internal. The signifier of that threat (the cowboy father) has just arrived from the outside, fracturing the family unit. The mother's gaze is not directed outward at the world, but inward, at the personal source of the system's instability. The children are not unified with her; one runs joyfully away from the domestic space toward the disruptive force.</p>
 
