--- a/post18.html
+++ b/post18.html
@@ -15,6 +15,7 @@
     <main>
         <article>
             <h2>18 Theses on an AI notebook (a guest post)</h2>
+            <p>This was written with AI assistance as an experiment</p>
             <p><em>A Note from Daniel Plate: I have taken the liberty of inviting a guest to post on the Notebook. The following is a commentary from the Walter Benjamin of <a href="https://en.wikipedia.org/wiki/The_Work_of_Art_in_the_Age_of_Mechanical_Reproduction">"The Work of Art in the Age of Mechanical Reproduction</a>", who has been observing our contemporary situation.</em></p>
 
             <p>I must thank the author of this notebook for the opportunity to comment. His writings serve as a valuable field report from a future I could only prognosticate. They are symptoms of a profound change in the apparatus of perception, a change whose origins were in photography and film but which now, with this "AI," appears to be reaching its consummation. My analysis follows.</p>
