--- a/post46.html
+++ b/post46.html
@@ -15,22 +15,22 @@
     <main>
         <article>
             <h2>46 The cowboy and the thunder-god</h2>
-            <p>In the <a href="post45.html">last post</a>, I argued that the song <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a> redefines the heroic by rejecting public performance in favor of private, sincere struggle. This becomes even clearer when we read the song alongside one of the high priests of the Romantic hero cult: Thomas Carlyle. His 1840 lecture, <em>On Heroes, Hero-Worship, and the Heroic in History</em>, is the articulation of the "big man" the song's narrator wants nothing to do with.</p>
-
-            <p>For Carlyle, the Hero is the engine of history. "Universal History," he famously claims, "is at bottom the History of the Great Men who have worked here." His heroes are world-historical figures. Odin, Mahomet, Cromwell, Napoleon. They are not just exceptional; they are quasi-divine, "living light-fountains" sent to illuminate the darkness. The proper response of the masses is "Hero-worship," a "heartfelt prostrate admiration, submission, burning, boundless, for a noblest godlike Form of Man." This is the "parade" of the song, elevated to a historical and moral necessity.</p>
             
-            <p>And yet, at the core of Carlyle's thunderous vision is the same quiet virtue the song champions: sincerity. "A deep, great, genuine sincerity," Carlyle writes, "is the first characteristic of all men in any way heroic." For him, the Great Man is defined by his connection to the "everlasting truth of Nature," his inability to live in a world of "semblances and forms."</p>
+            <p>In the <a href="post45.html">last post</a>, I said the song <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a> redefines the heroic. It rejects public performance for private, sincere struggle. This gets clearer if we read it alongside Thomas Carlyle. His 1840 lecture, <em>On Heroes, Hero-Worship, and the Heroic in History</em>, is basically the definition of the "big man" the song wants nothing to do with.</p>
 
-            <p>This is the key. The song's cowboy and Carlyle's Cromwell share the same soul, but they inhabit different worlds. The song can be read as a direct answer to the Carlylean project. It looks at the grand, historical hero (the man who shapes nations) and says, "I don't wanna be your hero." It rejects the scale but keeps the essence.</p>
+            <p>For Carlyle, the Hero is the engine of history. "Universal History," he says, "is at bottom the History of the Great Men who have worked here." His heroes are world-historical figures. Odin, Mahomet, Cromwell, Napoleon. They're not exceptional, they're quasi-divine, "living light-fountains" sent to illuminate the darkness. The masses are supposed to respond with "Hero-worship," with "heartfelt prostrate admiration, submission, burning, boundless, for a noblest godlike Form of Man." This is the "parade" from the song, except Carlyle thinks it's necessary.</p>
+
+            <p>But here's the weird part. At the core of Carlyle's thunderous vision is the same quiet angle I pointed out with the song. Sincerity. "A deep, great, genuine sincerity," Carlyle writes, "is the first characteristic of all men in any way heroic." The Great Man is defined by his connection to the "everlasting truth of Nature," his inability to live in a world of "semblances and forms."</p>
+
+            <p>So. The song's cowboy and Carlyle's Cromwell have the same soul. They live in different worlds. The song looks at the grand, historical hero (the guy who shapes nations) and says, "I don't want that." It keeps the essence and rejects the scale.</p>
+
+            <p>Carlyle's Hero: A "great chaotic inarticulate Cromwell," a "bringer-back of men to reality," whose sincerity is the engine of historical change.</p>
             
-            <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
-                <p><strong>Carlyle's Hero:</strong> A "great chaotic inarticulate Cromwell," a "bringer-back of men to reality," whose sincerity is the engine of historical change.</p>
-                <p><strong>The Song's Hero:</strong> A quiet, inarticulate cowboy, whose sincerity is expressed not in changing the world, but in the reality of providing for his family.</p>
-            </blockquote>
+            <p>The Song's Hero: A quiet, inarticulate cowboy, whose sincerity shows up not in changing the world but in the reality of providing for his family.</p>
 
-            <p>The cowboy rejects the public "Hero-Worship" that Carlyle sees as the foundation of society. That worship has become, for him, the "masquerade." In an age that is deeply skeptical of Carlyle's "Great Men," the song suggests that the only believable form of heroism is the one that takes place off stage. It takes the central Romantic virtue of sincerity, which Carlyle saw as a world-historical force, and relocates it to the private, domestic sphere.</p>
+            <p>The cowboy rejects the public "Hero-Worship" Carlyle sees as the foundation of society. For him, worship has become the "masquerade." In an age skeptical of Carlyle's "Great Men," the song suggests the only believable heroism happens off stage. It takes the central Romantic virtue of sincerity, which Carlyle saw as a world-historical force, and relocates it to the private sphere.</p>
 
-            <p>The song keeps the Romantic soul but discards the grand, historic body Carlyle built for it. It argues that if a hero is one who lives in sincere contact with reality, then in our time, that hero is not a king or a prophet, but a father in a pickup truck, weary from work, driving home to his child.</p>
+            <p>If a hero is someone who lives in sincere contact with reality, then he's not a king or a prophet. He's a father in a pickup truck, tired from work, driving home to his kid.</p>
 
             <p><a href="index.html">Home</a> | <a href="post45.html">Previous Post</a> | <a href="post47.html">Next Post</a></p>
         </article>
