--- a/post53.html
+++ b/post53.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <h2>53 Romanticism Was Never Naïve: A Defense in the Age of AI</h2>
-      <p>This post opens the <em>Defense of Romanticism</em> series. Its central claim is that the common critiques of AI art and literature are haunted by the ghost of a misunderstood Romanticism. Critics often attack a caricature—a "Romanticism" of sentimental feelings and diary-like sincerity.</p>
+      <p>This post opens the <em>Defense of Romanticism</em> series. Its central claim is that the common critiques of AI art and literature are marked by the trace of a misunderstood Romanticism. Critics often attack a caricature—a "Romanticism" of sentimental feelings and diary-like sincerity.</p>
       <p>This series argues for something different. True Romanticism was never naïve. It was a rigorous intellectual movement that built a powerful <strong>method</strong> for understanding texts, consciousness, and the very nature of meaning. That method, known as Romantic hermeneutics, is surprisingly robust—and it gives us the sharpest tools we have for analyzing the challenges of AI.</p>
 
       <h3>What This Series Will Do</h3>
