added postil post

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </header>
     <main>
         <section class="quickkit-card">
-        <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — a calm hub for Romanticism & Romantic hermeneutics (terms, method, contexts, links).</p>
+        <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
         </section>
 
 
         <nav>
             <ul>
+                <li><a href="post60.html">60 Sleep well! The unconscious arrogance of medieval sermon technology</a></li>
                 <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</a></li>
                 <li><a href="post58.html">58 "Better Than He Understood Himself": Why Interpretation Is Irreducible</a></li>
                 <li><a href="post57.html">57 The Interpreter's Blind Spot: Why Analyzing the System Isn't Enough</a></li>
