added 2 ricoeur posts

--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -39,7 +39,7 @@
         <ul>
           <li>Ralph Waldo Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em></a> (1841)</li>
           <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em></a> (1854)</li>
-          <li>William Wordsworth, <a href="https://faculty.csbsju.edu/dbeach/beautytruth/Wordsworth-PrefaceLB.pdf">“Preface to Lyrical Ballads” (1800)</a></li>
+          <li>William Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads” (1800)</a></li>
         </ul>
       </li>
     </ul>
