--- a/romantic-kit-contexts-england.html
+++ b/romantic-kit-contexts-england.html
@@ -36,7 +36,7 @@
 
     <h3>Open Texts (The Primary Sources)</h3>
     <ul>
-      <li>William Wordsworth, <a href="https://faculty.csbsju.edu/dbeach/beautytruth/Wordsworth-PrefaceLB.pdf">“Preface to Lyrical Ballads” (1800)</a> — The essential manifesto for the new poetry.</li>
+      <li>William Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads” (1800)</a> — The essential manifesto for the new poetry.</li>
       <li>Samuel Taylor Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a> — The most important work of poetic theory from the period, where he outlines his theory of the imagination.</li>
     </ul>
     <div class="bottom-links">
