--- a/romantic-kit-contexts-germany.html
+++ b/romantic-kit-contexts-germany.html
@@ -37,7 +37,7 @@
     <h3>Open Texts (The Primary Sources)</h3>
     <ul>
       <li>Friedrich Schlegel, <a href="https://germanhistorydocs.org/en/the-holy-roman-empire-1648-1815/friedrich-schlegel-athanaeum-fragments-1798"><em>Athenaeum Fragments</em> (selections)</a> — The manifesto of the Jena school, in its characteristic form.</li>
-      <li>Friedrich Schlegel, <a href="https://www.sas.upenn.edu/~cavitch/pdf-library/Schlegel_Philosophical_Fragments_UMP_edition.pdf"><em>Philosophical Fragments</em> (PDF)</a> — A deeper dive into the theoretical project.</li>
+      <li>Friedrich Schlegel, <a href="https://archive.org/details/friedrichschlege0000schl_o3n2"><em>Philosophical Fragments</em> (PDF)</a> — A deeper dive into the theoretical project.</li>
     </ul>
     <div class="bottom-links">
       <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
