--- a/romantic-kit-glossary.html
+++ b/romantic-kit-glossary.html
@@ -67,9 +67,9 @@
 
     <h3>Key Manifestos (Open Sources)</h3>
     <ul>
-      <li>Wordsworth, <a href="https://faculty.csbsju.edu/dbeach/beautytruth/Wordsworth-PrefaceLB.pdf">“Preface to Lyrical Ballads”</a></li>
+      <li>Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads”</a></li>
       <li>Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a></li>
-      <li>Carlyle, <a href="https://www.unife.it/stum/lingue/insegnamenti/letteratura-inglese-ii/materiale-didattico-2021-2022/Thomas%20Carlyle-%20Signs%20of%20the%20Times-%201829.pdf">“Signs of the Times”</a></li>
+      <li>Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html">“Signs of the Times”</a></li>
       <li>Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em></a></li>
     </ul>
     <div class="bottom-links">
