--- a/romantic-kit-technology-machine.html
+++ b/romantic-kit-technology-machine.html
@@ -41,7 +41,7 @@
     <ul>
       <li><strong>Key Critiques:</strong>
         <ul>
-          <li>Thomas Carlyle, <a href="https://www.unife.it/stum/lingue/insegnamenti/letteratura-inglese-ii/materiale-didatto-2021-2022/Thomas%20Carlyle-%20Signs%20of%20the%20Times-%201829.pdf">"Signs of the Times" (1829)</a> — The definitive diagnosis of the "Mechanical Age."</li>
+          <li>Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html">"Signs of the Times" (1829)</a> — The definitive diagnosis of the "Mechanical Age."</li>
           <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em></a> (especially the chapter "Sounds") — Contains his famous meditations on the railroad.</li>
         </ul>
       </li>
