--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
         <p><a href="romantic-quick-kit.html">Romantic Quick Kit</a> — things that might be helpful (terms, method, contexts, links).</p>
         </section>
 
+        <!-- <section class="quickkit-card">
+        <p><a href="ai-hermeneutics-kit.html">AI Hermeneutics Kit</a> — methods and theory for interpreting AI-generated texts.</p>
+        </section> -->
+
 
         <nav>
             <ul>
+                <li><a href="post62.html">62 A Practical Method for Reading AI: Archeology and Teleology</a></li>
+                <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
                 <li><a href="post60.html">60 Sleep well! The unconscious arrogance of medieval sermon technology</a></li>
                 <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</a></li>
                 <li><a href="post58.html">58 "Better Than He Understood Himself": Why Interpretation Is Irreducible</a></li>
