--- a/post13.html
+++ b/post13.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>13 Summing things up</h2>
+            <h2>13 Summing Things Up</h2>
 
             <p>This post lists where the three non‑romantic definitions of evil echo the romantic definition in <a href="post9.html">Post 9</a>. I'm only noting agreement. Not differences.</p>
 
