--- a/post15.html
+++ b/post15.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>15 Propaganda and what's already there</h2>
+            <h2>15 Propaganda and What's Already There</h2>
             <p>I've been reading Jacques Ellul's <em>Propaganda</em>. There's a lot here to think about.</p>
             <p>Here's a quote:</p>
             
