--- a/post16.html
+++ b/post16.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>16 Propaganda and my feelings</h2>
+            <h2>16 Propaganda and My Feelings</h2>
             <p>Continuing with Jacques Ellul's book. How does propaganda work with our need to feel like authentic individuals? Another quote:</p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
