--- a/post17.html
+++ b/post17.html
@@ -13,7 +13,7 @@
 </header>
     <main>
         <article>
-            <h2>17 Propaganda and being seen</h2>
+            <h2>17 Propaganda and Being Seen</h2>
             <p>Here's the paradox of propaganda. A tool for managing the masses can't work if people feel like a faceless herd. So what does it do?</p>
             <p>Ellul explains the trick. It has to make you feel like it's talking just to you.</p>
             
