--- a/post18.html
+++ b/post18.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>18 Theses on an AI notebook (a guest post)</h2>
+            <h2>18 Theses on an AI Notebook (A Guest Post)</h2>
             <p>This was written with AI assistance as an experiment</p>
             <p><em>A Note from Daniel Plate: I have taken the liberty of inviting a guest to post on the Notebook. The following is a commentary from the Walter Benjamin of <a href="https://en.wikipedia.org/wiki/The_Work_of_Art_in_the_Age_of_Mechanical_Reproduction">"The Work of Art in the Age of Mechanical Reproduction</a>", who has been observing our contemporary situation.</em></p>
 
