--- a/post20.html
+++ b/post20.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>20 AI and fascism</h2>
+            <h2>20 AI and Fascism</h2>
             <p>It's hard to miss all the "ai is fascist" stuff out there. Essays like Gareth Watkins's <a href="https://newsocialist.org.uk/transmissions/ai-the-new-aesthetics-of-fascism/">"AI: The New Aesthetics of Fascism,"</a> and videos like The Kavernacle's <a href="https://www.youtube.com/watch?v=jQkAETsgVN4">"Why Far-Right Conservatives LOVE AI Art"</a> or Tom Nicholas's <a href="https://www.youtube.com/watch?v=mrfyTSwgfzw">"Fascists Love TERRIBLE AI Art."</a></p>
             
             <p>The argument. AI's got an aesthetic. Soulless, hollow, inhuman, and efficient at producing sanitized cruelty. And this is the perfect aesthetic for modern fascism. The Trump administration's weird AI slop, the German AfD's propaganda videos, the sadist excitement at replacing human artists. All of it gets pulled together as evidence.</p>
