--- a/post22.html
+++ b/post22.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>22 We get this thinking in us - part 1</h2>
+            <h2>22 We Get This Thinking in Us - Part 1</h2>
             <p>There's a phrase at the beginning of a video by an AI-optimist Youtuber, Julia McCoy. She's making the case for personal empowerment and breaking free from old mindsets. But right at the beginning of this call to agency, she says something strange:</p>
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
                 <p>...it's also really really important that we get this thinking in us...</p>
