--- a/post23.html
+++ b/post23.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>23 We get this thinking in us - part 2</h2>
+            <h2>23 We Get This Thinking in Us - Part 2</h2>
             <p>The puzzle from the <a href="post22.html">last post</a> is this sense of language as an autonomous system operating inside us. To get a handle on this, I use Ferdinand de Saussure. His work is over a century old, but it describes the world that large language models are now making explicit.</p>
             <p>My quick summary here is from Jonathan Culler's book <em>Saussure</em>. Saussure gives us a structural way to look at language (and especially little language slips). It's not about what the speaker "really feels," but about the system she's trying to build. Here are the essential tools:</p>
 
