--- a/post29.html
+++ b/post29.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>29 No wince in the syllabus, no wince in the student?</h2>
+            <h2>29 No Wince in the Syllabus, No Wince in the Student?</h2>
             <p>The case against AI in the classroom is almost always a defense of the personal and the unscripted. The Socratic. It's a defense of the idea that education is a communion between human souls. In the <a href="post28.html">last post</a>, we saw how this romantic ideal stumbles on a simple fact: the author doesn't wince. Shakespeare is not present in the room with us. But what if the problem is even closer to home? What if the instructor isn't either?</p>
 
             <p>Consider the primary tool for structuring the modern course: the syllabus. I'm looking at a <a href="https://www.umsl.edu/services/ctl/resources-for-teaching/syllabus-templates.html">bunch of templates</a> from the University of Missouri-St. Louis. Not picking on UMSL. Just the first link when I Googled "syllabus template." It is a perfect artifact of a system that has already replaced the personal with the technical. It isn't a conversation; it's a script with blank spaces to be filled in.</p>
