--- a/post31.html
+++ b/post31.html
@@ -14,7 +14,7 @@
 </header>
 <main>
 <article>
-<h2>31 Harari's AI future (Part 1)</h2>
+<h2>31 Harari's AI Future (Part 1)</h2>
 <p>Browse around for stuff about AI, and you'll run into Yuval Noah Harari. He wrote <em>Sapiens</em> and some other books. A lot of people care about what he says. I've never gotten into him but he's got intellectual influence. He's also pretty obsessed with AI. He did an interview on the Rich Roll podcast, which I know nothing about but which popped up for me. So here's his vision of how AI could <a href="https://www.youtube.com/watch?v=2-e246GRuec">"Quietly Control the Minds of Billions."</a></p>
 
 <p>His argument is the real danger isn't a Hollywood robot rebellion but something more subtle. As I've been doing, I read the podcast through the lens of Ellul and <em>Propaganda</em>. Ellul would agree with Harari's starting point but then take apart the idea that any of this is new. For Ellul, AI isn't the beginning of a new kind of control; it's the system that's been in place for a really long time.</p>
