--- a/post32.html
+++ b/post32.html
@@ -14,7 +14,7 @@
 </header>
 <main>
 <article>
-<h2>32 Harari's AI future (Part 2)</h2>
+<h2>32 Harari's AI Future (Part 2)</h2>
 <p>In the <a href="post31.html">last post</a>, I took a look at Yuval Noah Harari's warnings about AI using Ellul's <em>Propaganda</em>. Ellul's work shows that Harari's "future" is already here. Then I ended by bringing up words in Harari like "consciousness," "feelings," and "intimacy." He's worried about a machine that can mimic the human soul.</p>
 
 <p>And that's the tell. His critique of AI is a rewriting of<a href="post21.html">the Romantic trace</a> this blog has been tracking.</p>
