--- a/post34.html
+++ b/post34.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>34 A quote</h2>
+            <h2>34 A Quote</h2>
 
             <p>This is from something called "The Book of the Words of Righteousness" in <em>The Book of Enoch</em>. It's God speaking to Enoch about the fate of the Watchers but also about the nature of their offspring, the giants.</p>
 
