--- a/post35.html
+++ b/post35.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>35 Another quote</h2>
+            <h2>35 Another Quote</h2>
             <p>Digging into the later parts of <em>Enoch</em>, in the section about how the cosmos works. It's less about angels and more about the mechanics of the world: the sun and the moon and the winds.</p>
             
             <blockquote style="border-left: 3px solid #ccc; padding-left: 1.5rem; margin-left: 1rem; font-style: italic;">
