--- a/post36.html
+++ b/post36.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>36 A system running inside</h2>
+            <h2>36 A System Running Inside</h2>
             <p>I've been listening to Elan Barenholtz, a cognitive scientist at Florida Atlantic University, and he has this idea that language is a kind of external system running on our mental hardware. It sounds metaphorical, but his logic for taking it literally is built on what Large Language Models (LLMs) have shown us.</p>
 
             <p>He starts with the provocative claim that language isn't something we create, but something that gets installed in us.</p>
