--- a/post39.html
+++ b/post39.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>39 This guy's an idiom</h2>
+            <h2>39 This Guy's an Idiom</h2>
             <p>Go to <a href="https://www.youtube.com/watch?v=p58vknxGR4I&t=3387s">56:13 in this video</a>.</p>
             <p>This is why I don't blow off <a href="https://www.youtube.com/watch?v=FIMw04GJJ7U&t=1059s">Barenholtz</a>. Or the structuralists. Language does its own thing. It follows its own patterns. It speaks through us.</p>
             <p>"This guy's an idiom."</p>
