--- a/post40.html
+++ b/post40.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>40 AI and bullshit, a moralist view</h2>
+            <h2>40 AI and Bullshit, a Moralist View</h2>
             <p>I've been trying to categorize the different ways people feel AI is wrong or "evil." I've looked at it through the lens of <a href="post10.html">systemic harm</a>, <a href="post11.html">frustrated ends</a>, and <a href="post12.html">imitative negation</a>. In the middle of it all, I keep finding the same thing: the <a href="post21.html">Romantic ideal</a> of the authentic, sincere human soul.</p>
             
             <p>Recently, I came across an academic version of this argument. It's from a group of philosophers who argue AI isn't lying to us or simply mistaken. It's bullshitting. Here's a <a href="https://www.youtube.com/watch?v=SE33HBfsu04&t=297s">conversation</a> that lays it all out.</p>
