--- a/post41.html
+++ b/post41.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>41 A computational view of language</h2>
+            <h2>41 A Computational View of Language</h2>
             <p>The <a href="post40.html">last post</a> explored the idea that AI is bullshit. It's a moral argument. It says the machine is a serious problem because it doesn't care about the truth. It's an empty, insincere imitation of a human speaker. This lines up with a lot of the <a href="post9.html">Romantic anxieties</a> I've been tracking. But there's a competing view based on research into computation. The cognitive scientist Elan Barenholtz wants us to rethink the whole problem.</p>
             
             <p>Barenholtz's starting point is that LLMs have given us a new empirically-based insight into the nature of language. He says the existence of LLM's go a long way to demonstrate that language is "autogenerative," a self-contained system with all the rules for its own operation baked into itself. It doesn't need to be connected to the real, physical world to function.</p>
