--- a/post45.html
+++ b/post45.html
@@ -14,7 +14,7 @@
    </header>
    <main>
        <article>
-           <h2>45 Heroes and parades</h2>
+           <h2>45 Heroes and Parades</h2>
            <p>I'm going to write a series of posts about the music video <a href="https://www.youtube.com/watch?v=mHeK0Cwr9sg">"Hero"</a> by Family of the Year. I'm going to push out the length of these. I want to work these ideas a bit harder.</p>
            
            <p>The first time I heard the song, it seemed pretty obvious it's a kind of anthem against the idea of heroes. The lyrics are a personal opt-out of any grand ideas: "I don't wanna be your hero / I don't wanna be a big man." But the video's different. It follows the life of a rodeo cowboy, and it's a more complicated story and also pretty familiar. The song isn't a critique of the hero. It's an example of this <a href="post21.html">Romantic trace</a> I've been commenting on. It rejects one kind of hero in favor of another.</p>
