--- a/post50.html
+++ b/post50.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>50 Three mothers, two systems of meaning</h2>
+            <h2>50 Three Mothers, Two Systems of Meaning</h2>
             <p>The last few posts have explored the "Hero" music video through a few different lenses, reading the father's character for its internal conflicts (Post 49) and the family's story for its human cost (Post 47). But another kind of analysis is possible, one less concerned with individual psychology and more with how the image functions within a larger visual system. By treating the mother in the doorway not as a window onto a soul, but as a sign within a system, we can see how its meaning is constructed. To do this, we can place the image in a structural relationship with two iconic photographs: Dorothea Lange's "Migrant Mother" and Arthur Rothstein's portrait of a sharecropper's wife and children.</p>
             
             <div class="image-comparison">
