--- a/post51.html
+++ b/post51.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>51 So about that shopping cart</h2>
+            <h2>51 So About That Shopping Cart</h2>
             <p>I'm really not happy with my analysis of the shopping cart moment in <a href="post49.html">post 49</a>.</p>
             <p>I said it was something like this guy's unwillingness to grow up or his rejection of responsibility. And I do think the song obviously doesn't just want us to let this guy off the hook when it comes to his daughter. The mom is definitely there in the doorway not buying even a little bit into her daughter's excitement to see her dad coming to pick her up. So that's there.</p>
             <p>But it's not there in the shopping cart scene. The shopping cart is a moment of pleasure at work. It's something like a minimum-wage guy trying to steal a little time for himself while on the clock. So how does that fit in?</p>
