--- a/post60.html
+++ b/post60.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>60 Sleep well! The unconscious arrogance of medieval sermon technology</h2>
+            <h2>60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</h2>
             <p>Imagine walking into a medieval bookstore and finding a sermon collection titled <em>Dormi secure</em>—literally, "Sleep Well!" This wasn't false advertising or wishful thinking. It was a frank acknowledgment of purpose: here was a book of ready-made sermons designed specifically so that "an overworked or under-trained priest" could "sleep without worry" on Saturday night. Sunday's sermon was handled. No struggle required.</p>
 
             <p>I mentioned this detail in passing in my <a href="post27.html">earlier post</a> about medieval postils, but it deserves its own meditation. The title "Sleep Well!" reveals something startling about medieval attitudes toward sermon production—and something equally revealing about our modern ones. Medieval Christians were comfortable with a technology that explicitly promised to eliminate pastoral anxiety about preaching. We are not.</p>
