--- a/post62.html
+++ b/post62.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>62 A Practical Method for Reading AI: Archeology and Teleology</h2>
+            <h2>62 A Practical Method for Reading AI: Archaeology and Teleology</h2>
             <p>The <a href="post61.html">last post</a> introduced Paul Ricoeur's core idea: modern interpretation is a "conflict" between a hermeneutics of suspicion and a hermeneutics of recollection. This isn't just an abstract theory; it provides the foundation for a practical, step-by-step method for engaging with AI-generated texts and chat. This method moves us beyond simple reactions ("Is it authentic? Is it bullshit?") and into the rigorous work of interpretation.</p>
             <p>The method is a conscious, dialectical movement between two poles. Ricoeur calls this a movement between an **archeology** (a regressive analysis of a text's origins) and a **teleology** (a progressive analysis of the meaning it makes possible).</p>
 
