--- a/post8.html
+++ b/post8.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>8 Something online about the soul of art</h2>
+            <h2>8 Something Online About the Soul of Art</h2>
             <p>I read <a href="https://medium.com/@scholarsonyalphy2022/ai-and-the-soul-of-art-aff2a9c60970">this thing</a> online about AI and the soul of art.</p>
 <p>I went to Claude and asked, "Help me analyze whether this was written entirely by a human, partly by an AI or mostly by an AI" and then pasted in the "soul of art" essay. This is what Claude said:</p>
 
