--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <nav>
             <ul>
-                <li><a href="post62.html">62 A Practical Method for Reading AI: Archeology and Teleology</a></li>
+                <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
                 <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
-                <li><a href="post60.html">60 Sleep well! The unconscious arrogance of medieval sermon technology</a></li>
+                <li><a href="post60.html">60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</a></li>
                 <li><a href="post59.html">59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</a></li>
                 <li><a href="post58.html">58 "Better Than He Understood Himself": Why Interpretation Is Irreducible</a></li>
                 <li><a href="post57.html">57 The Interpreter's Blind Spot: Why Analyzing the System Isn't Enough</a></li>
@@ -34,58 +34,58 @@
                 <li><a href="post55.html">55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</a></li>
                 <li><a href="post54.html">54 Reclaiming the Romantic "Author"</a></li>
                 <li><a href="post53.html">53 Romanticism Was Never Naïve: A Defense in the Age of AI</a></li>
-                <li><a href="post52.html">52 Analogies for writing with AI and why I don't like them</a></li>
-                <li><a href="post51.html">51 So about that shopping cart</a></li>
-                <li><a href="post50.html">50 Three mothers, two systems of meaning</a></li>
-                <li><a href="post49.html">49 Just a kid like everyone else</a></li>
-                <li><a href="post48.html">48 A structuralist reading of the "Hero" video</a></li>
-                <li><a href="post47.html">47 A hero for whom?</a></li>
-                <li><a href="post46.html">46 The cowboy and the thunder-god</a></li>
-                <li><a href="post45.html">45 Heroes and parades</a></li>
-                <li><a href="post44.html">44 So what do I think?</a></li>
-                <li><a href="post43.html">43 A dance of symbols</a></li>
-                <li><a href="post42.html">42 An attempt at summing things up so far </a></li>
-                <li><a href="post41.html">41 A computational view of language</a></li>
-                <li><a href="post40.html">40 AI and bullshit, a moralist view </a></li>
-                <li><a href="post39.html">39 This guy's an idiom</a></li>
-                <li><a href="post38.html">38 Is AI bullshit?</a></li>
-                <li><a href="post37.html">37 Sharpening the blur</a></li>
-                <li><a href="post36.html">36 A system running inside</a></li>
-                <li><a href="post35.html">35 Another quote</a></li>
-                <li><a href="post34.html">34 A quote</a></li>
-                <li><a href="post33.html">33 Something new and strange</a></li>
-                <li><a href="post32.html">32 Harari's AI future (Part 2)</a></li>
-                <li><a href="post31.html">31 Harari's AI future (Part 1)</a></li>
-                <li><a href="post30.html">30 But what about Whitman?</a></li>
-                <li><a href="post29.html">29 No wince in the syllabus, no wince in the student?</a></li>
-                <li><a href="post28.html">28 No wince in the writer, no wince in the reader?</a></li>
-                <li><a href="post27.html">27 Preaching by prompt in the 16th century</a></li>
-                <li><a href="post26.html">26 The pastor as romantic author</a></li>
+                <li><a href="post52.html">52 Analogies for Writing with AI and Why I Don't Like Them</a></li>
+                <li><a href="post51.html">51 So About That Shopping Cart</a></li>
+                <li><a href="post50.html">50 Three Mothers, Two Systems of Meaning</a></li>
+                <li><a href="post49.html">49 Just a Kid Like Everyone Else</a></li>
+                <li><a href="post48.html">48 A Structuralist Reading of the "Hero" Video</a></li>
+                <li><a href="post47.html">47 A Hero for Whom?</a></li>
+                <li><a href="post46.html">46 The Cowboy and the Thunder-God</a></li>
+                <li><a href="post45.html">45 Heroes and Parades</a></li>
+                <li><a href="post44.html">44 So What Do I Think?</a></li>
+                <li><a href="post43.html">43 A Dance of Symbols</a></li>
+                <li><a href="post42.html">42 An Attempt at Summing Things Up So Far</a></li>
+                <li><a href="post41.html">41 A Computational View of Language</a></li>
+                <li><a href="post40.html">40 AI and Bullshit, a Moralist View</a></li>
+                <li><a href="post39.html">39 This Guy's an Idiom</a></li>
+                <li><a href="post38.html">38 Is AI Bullshit?</a></li>
+                <li><a href="post37.html">37 Sharpening the Blur</a></li>
+                <li><a href="post36.html">36 A System Running Inside</a></li>
+                <li><a href="post35.html">35 Another Quote</a></li>
+                <li><a href="post34.html">34 A Quote</a></li>
+                <li><a href="post33.html">33 Something New and Strange</a></li>
+                <li><a href="post32.html">32 Harari's AI Future (Part 2)</a></li>
+                <li><a href="post31.html">31 Harari's AI Future (Part 1)</a></li>
+                <li><a href="post30.html">30 But What About Whitman?</a></li>
+                <li><a href="post29.html">29 No Wince in the Syllabus, No Wince in the Student?</a></li>
+                <li><a href="post28.html">28 No Wince in the Writer, No Wince in the Reader?</a></li>
+                <li><a href="post27.html">27 Preaching by Prompt in the 16th Century</a></li>
+                <li><a href="post26.html">26 The Pastor as Romantic Author</a></li>
                 <li><a href="post25.html">25 Crossing Brooklyn Ferry</a></li>
-                <li><a href="post24.html">24 We get this thinking in us - part 3</a></li>
-                <li><a href="post23.html">23 We get this thinking in us - part 2</a></li>
-                <li><a href="post22.html">22 We get this thinking in us - part 1</a></li>
-                <li><a href="post21.html">21 The Romantic trace</a></li>
-                <li><a href="post20.html">20 AI and fascism</a></li>
-                <li><a href="post19.html">19 A big thank-you to Benjamin, but...</a></li>
-                <li><a href="post18.html">18 Theses on an AI notebook (a guest post)</a></li>
-                <li><a href="post17.html">17 Propaganda and being seen</a></li>
-                <li><a href="post16.html">16 Propaganda and my feelings</a></li>
-                <li><a href="post15.html">15 Propaganda and what's already there</a></li>
-                <li><a href="post14.html">14 Back to the romantic</a></li>
-                <li><a href="post13.html">13 Summing things up</a></li>
+                <li><a href="post24.html">24 We Get This Thinking in Us - Part 3</a></li>
+                <li><a href="post23.html">23 We Get This Thinking in Us - Part 2</a></li>
+                <li><a href="post22.html">22 We Get This Thinking in Us - Part 1</a></li>
+                <li><a href="post21.html">21 The Romantic Trace</a></li>
+                <li><a href="post20.html">20 AI and Fascism</a></li>
+                <li><a href="post19.html">19 A Big Thank-You to Benjamin, But...</a></li>
+                <li><a href="post18.html">18 Theses on an AI Notebook (A Guest Post)</a></li>
+                <li><a href="post17.html">17 Propaganda and Being Seen</a></li>
+                <li><a href="post16.html">16 Propaganda and My Feelings</a></li>
+                <li><a href="post15.html">15 Propaganda and What's Already There</a></li>
+                <li><a href="post14.html">14 Back to the Romantic</a></li>
+                <li><a href="post13.html">13 Summing Things Up</a></li>
                 <li><a href="post12.html">12 Evil as Imitative Negation</a></li>
                 <li><a href="post11.html">11 Evil as Frustrated Ends</a></li>
                 <li><a href="post10.html">10 Evil as Systemic Harm</a></li>
                 <li><a href="post9.html">9 Romantic Evil</a></li>
-                <li><a href="post8.html">8 Something online about the soul of art</a></li>
-                <li><a href="post7.html">7 Only humans</a></li>
-                <li><a href="post6.html">6 Two things I reject</a></li>
-                <li><a href="post5.html">5 Starting...now</a></li>
-                <li><a href="post4.html">4 This puzzles me</a></li>
-                <li><a href="post3.html">3 A guiding principle</a></li>
+                <li><a href="post8.html">8 Something Online About the Soul of Art</a></li>
+                <li><a href="post7.html">7 Only Humans</a></li>
+                <li><a href="post6.html">6 Two Things I Reject</a></li>
+                <li><a href="post5.html">5 Starting...Now</a></li>
+                <li><a href="post4.html">4 This Puzzles Me</a></li>
+                <li><a href="post3.html">3 A Guiding Principle</a></li>
                 <li><a href="post2.html">2 Hallucinations and misinformation and AI</a></li>
-                <li><a href="post1.html">1 This site</a></li>
+                <li><a href="post1.html">1 This Site</a></li>
             </ul>
         </nav>
     </main>
