--- a/post1.html
+++ b/post1.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>1 This site</h2>
+            <h2>1 This Site</h2>
             <p>I'm not opposed to writing things with AI. I've told plenty of people my position. Nobody should have to reveal their writing methods. Write things totally "by hand," or write things with AI. I'm ok either way.</p>
             <p>That said, this blog will be just my thoughts, typed out one word at a time. With some obvious exceptions.</p>
             <p>The code is a different story. I've been using Gemini's coding-in-the-terminal tool. It's free, and I've gotten the hang of it. I like it.</p>
