--- a/post24.html
+++ b/post24.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>24 We get this thinking in us - part 3</h2>
+            <h2>24 We Get This Thinking in Us - Part 3</h2>
             <p>So, what does a structuralist make of the phrase "we get this thinking in us"? From a Saussurean perspective, Julia McCoy's accidental passive phrasing isn't a slip-up. It's an unintentional moment of profound accuracy. It reveals the very mechanics of how ideology and social change actually work.</p>
             <p>Her overt message is individualistic: "You must choose to think this new way." But her grammar reveals the structuralist truth: We are inhabited by systems of thought. A <em>langue</em> is not something we create; it is a "social product" we receive. It gets "in us." Her project is not to persuade individuals one by one, but to replace the entire dominant <em>langue</em> of "industrialism" with a new one of "AI abundance."</p>
             <p>She is trying to install a new network of signs, with new values defined by new oppositions. Once the new system is "in us," it will operate automatically, structuring our perceptions and responses without our conscious effort. The goal is for the new thinking to become as natural and invisible as the old one was.</p>
