--- a/post26.html
+++ b/post26.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>26 The pastor as romantic author</h2>
+            <h2>26 The Pastor as Romantic Author</h2>
             <p>The idea of a pastor using AI to write a sermon prompts an almost universal feeling of protest. Probably even for people who aren't religious, it feels like a profound betrayal. But a betrayal of what, exactly? A recent interview with Dr. Scott Stiegemeyer on <a href="https://www.youtube.com/watch?v=BpLEWub6Fq8">"Issues, Etc.,"</a> a radio show and podcast from the Lutheran Church—Missouri Synod (LCMS), gives us the vocabulary for this feeling. In doing so, it reveals how deeply our modern idea of the pastor is a Romantic one. The outrage isn't just about doctrinal error; it's a defense of the pastor as a singular, authentic author.</p>
             
             <p>Stiegemeyer’s core objection is that an AI-generated sermon is an empty form. He repeats a phrase ("no one there") as central claim. In this AI-assisted pastor's work, there is "<em>no one there</em>." This is the language of presence versus simulation. The sermon, in this view, is not merely a technical report on a biblical text; it is a sincere offering from the pastor's own soul. For him to use AI is to engage in a kind of <a href="post9.html">"inauthenticity"</a>, to speak words he does not inhabit. It is a "profaned communion."</p>
