--- a/post28.html
+++ b/post28.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>28 No wince in the writer, no wince in the reader?</h2>
+            <h2>28 No Wince in the Writer, No Wince in the Reader?</h2>
             <p>Pretty much every day I see something about AI in education. It's mostly negative. And it tends to rely on the Romantic idea of authorship this blog returns to quite a bit. To learn from a text is to connect with the living soul of the person who wrote it. It’s the core of the <a href="post9.html">Romantic worldview</a>. It's all over the place in this conversation/debate: <a href="https://www.youtube.com/watch?v=Aq_08Vsm5Z0&t=9s">"AI & The End of Education"</a>. One panelist argues that when we read, we are trying to understand what the author’s “mind was doing.” We're connecting with a “human being at the other end.” Without that, reading is impossible. And AI can't provide this because there is no person there. No soul, no communion, no education.</p>
 
             <p>But the whole idea collapses under the weight of a simple quote thrown out by another panelist (quoting W.E.B. Du Bois).</p>
