--- a/post33.html
+++ b/post33.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>33 Something new and strange</h2>
+            <h2>33 Something New and Strange</h2>
             <p>I've been wondering recently about Babel.</p>
             <p>About Babel and <a href="https://en.wikipedia.org/wiki/Book_of_Enoch">Enoch</a>. Feels like those are worth digging into now.</p>
             <p><a href="index.html">Home</a> | <a href="post32.html">Previous Post</a> | <a href="post34.html">Next Post</a></p>
