--- a/post38.html
+++ b/post38.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <article>
-            <h2>38 Is AI bullshit?</h2>
+            <h2>38 Is AI Bullshit?</h2>
             <p><a href="https://en.wikipedia.org/wiki/On_Bullshit">Yes.</a></p>
             <p><a href="index.html">Home</a> | <a href="post37.html">Previous Post</a> | <a href="post39.html">Next Post</a></p>
         </article>
