--- a/post5.html
+++ b/post5.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>5 Starting...now</h2>
+            <h2>5 Starting...Now</h2>
             <p>There's this very annoying thing I can't help. Every few months, sometimes more often, I take all the folders on my computer I use for writing and put them in a folder titled something like, "Old - August 5, 2005" (or whatever the date is). Then I start over.</p>
             <p>I love the feeling of clearing room, starting from scratch. But it's very destructive to every version of me that predates the present. Still, I really can't help it.</p>
             <p>There's another phrase that might seem like the opposite of "Starting...now." It's "I just keep going." One foot after another, that sort of thing. But those two phrases ("starting...now" and "I just keep going") have more in common than you might think.</p>
