--- a/post6.html
+++ b/post6.html
@@ -14,7 +14,7 @@
 </header>
     <main>
         <article>
-            <h2>6 Two things I reject</h2>
+            <h2>6 Two Things I Reject</h2>
             <p>Two things I reject as basic to art: originality and authenticity. My reasons are easy to state simply.</p>
             <p>Originality - if art has to be original in order to count as art, then almst nobody makes art because almost nothing is actually original.</p>
             <p>Authenticity - if authenticity is the measure of art, then the personal diary of a 13 or 14-year old working out their feelings is the highest form of art.</p>
